# github-actions-demo-1

./: README.md
demo1/: pyproject.toml
demo1/src/: hello_world.py
demo1/tests/: test_demo1.py
