[tool.poetry]
name = "demo1"
version = "0.1.0"
description = ""
authors = ["sobe2023 <sobeikea2023@gmail.com>"]
readme = "README.md"
packages = [{include = "demo1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
